cmake_minimum_required(VERSION 3.12)
project(c3)

add_subdirectory(c3_1_1)
add_subdirectory(c3_1_2)
add_subdirectory(c3_1_3)
add_subdirectory(c3_1_4)
add_subdirectory(c3_1_5)
add_subdirectory(c3_2_1)
add_subdirectory(c3_2_2)
add_subdirectory(c3_2_3)
add_subdirectory(c3_2_4)
add_subdirectory(c3_2_5)
add_subdirectory(c3_3_1)
add_subdirectory(c3_3_2)
add_subdirectory(c3_3_3)

