cmake_minimum_required(VERSION 3.12)
project(c4)
add_subdirectory(c4_1)
add_subdirectory(c4_2_1)
add_subdirectory(c4_2_2)
add_subdirectory(c4_2_3)
add_subdirectory(c4_2_4)
add_subdirectory(c4_2_4_1)
add_subdirectory(c4_2_5)
add_subdirectory(c4_3_1)
add_subdirectory(c4_3_2)
add_subdirectory(c4_3_3)
add_subdirectory(c4_4_1)
add_subdirectory(c4_4_2)
add_subdirectory(c4_4_3)
add_subdirectory(c4_4_4)
add_subdirectory(c4_5_1)
add_subdirectory(c4_5_2)
